# micronuclAI

./: .gitignore  Dockerfile  ESSENTIAL_LICENSE_CONDITIONS.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  python-package-windows.yml  python-package.yml  python-publish.yml
micronuclai/model/: micronuclai_predict.py
notebooks/: 1_get_files_per_folder.ipynb  2_model_test_results.ipynb  3_BBBC039_comparison.ipynb  3_H358_comparison.ipynb  3_KPKL_comparison.ipynb  analyze_multiclass_training_results.ipynb  check _binary_prediction_on_all_training_dataset.ipynb  compare_apples_w_apples.ipynb  get_bounding_box.ipynb  get_well_predictions.ipynb  get_well_preds.ipynb  label_train_test_split.ipynb  nuclei_cells_comparison.ipynb  read_from_sheets.ipynb  sandbox.ipynb
src/: __init__.py  cellpose_segmentation.py  czi2ometif.py  extract_single_nuclei.py  get_bounding_box.py  isonuc.py  jpeg2ometif.py  labeling_tool.py  preprocessing.py  segmentation_cellpose.py  segmentation_deepcell.py  segmentation_stardist.py
src/model/: augmentations.py  cam.py  dataset.py  gradCAM.py  inference.py  logger.py  main.py  micronuclai_predict.py  models.py  prediction.py  prediction2.py  utils.py
src/utils/: blur_detect.py  isonuc.py  jpeg2ometif.py
test/: test_mask.tiff
workflow/: convert2ometif.nf  extract_nuclei.nf  mask_cellpose.nf  mask_deepcell.nf  mask_stardist.nf  micronucleAI_prediction.nf  predict.nf  predict2.nf  preprocess_cellpose_isonuc.nf  segmentation.nf
