[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micronuclai"
version = "0.1.2"
authors = [
    {name = "Miguel A. Ibarra-Arellano", email = "c180l058j@mozmail.com"}
]
license = {text = "AGPL-3.0-or-later"}
description = "Automated identification of micronuclei for chromosomal instability (CIN) quantification."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3"
]
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchvision",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "scikit_learn==1.6.1",
    "mask2bbox==0.0.23",
    "lightning==2.5.0"
]
keywords = [
    "chromosomal instability",
    "cin",
    "micronuclei",
    "micronuclai"
]

[tool.setuptools]
packages = ["src", "src.model"]

[project.scripts]
micronuclai-predict = "src.model.micronuclai_predict:main"

[project.urls]
Homepage = "https://github.com/SchapiroLabor/micronuclAI"
Issues = "https://github.com/SchapiroLabor/micronuclAI/issues"